--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,9 @@
     <string name="settings">Settings</string>
     <string name="game_mode_btn_endless">Endless</string>
     <string name="game_mode_btn_hardcore">Hardcore</string>
-    <string name="game_mode_btn_surprise">Überraschung</string>
+    <string name="game_mode_btn_surprise">Surprise</string>
+    <string name="delete_highscore_title">Delete highscore</string>
+    <string name="delete_highscore">Do you really want to clear your highscore history?</string>
+    <string name="delete_approve">Yes</string>
+    <string name="delete_deny">No</string>
 </resources>
